# carolcc

./: .gitignore  1.c  CMakeCache.txt  CMakeLists.txt  IR_test.sh  LICENSE  Makefile  README.md  cmake_install.cmake  compiler  syntax_detail.md  syntax_graph.md  syntax_show.md
SysY2koopaIR/: CMakeLists.txt  Makefile
SysY2koopaIR/src/: ast.cpp  error.cpp  main.cpp  node.cpp  runtime.cpp
SysY2koopaIR/src/frontend/: parser.cpp  parser.h  parser.hpp  token.cpp  token.l
SysY2koopaIR/test/: test.sh
SysY2koopaIR/test/step1/: 11.c
SysY2koopaIR/test_file/: class_test.cpp
carolcc/: CMakeLists.txt  IR_test.sh
include/: error.h  node.h
src/: ast.cpp  main.cpp  node.cpp  node.h  runtime.cpp  runtime.h  syntax_tree.cpp  syntax_tree.h  utils.h
src/frontend/: parser.cpp  parser.h  parser.tab.c  parser.y  token.cpp  token.l  wrong_paser.y
src/helpers/: graph_helper.cpp  graph_helper.h  type_helper.cpp  type_helper.h  type_helpers.cpp  type_helpers.h
src/ir/: base_block.cpp  base_block.h  function.cpp  function.h  instruction.cpp  instruction.h
src/passes/: module.h  pass.h  pass_manager.h
src/visitor/: syntax_detail_shower.cpp  syntax_detail_shower.h  syntax_tree_builder.cpp  syntax_tree_builder.h  syntax_tree_shower.cpp  syntax_tree_shower.h  visitor_base.cpp  visitor_base.h
test/: IR_test_lab3.c  IR_test_lab4.c  test.sh
test/step0/: test.c
test/step1/: 1.c  10.c  12.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  step1.c
test_file/: class_test
